tests/paczka1/fuzzy1/59238601.err
Error in line 1: 1R9zlDaXrR S830 10,7
Error in line 5: rst7s6Lt1h S400 48,1
Error in line 32: A823 S830 68,3
Error in line 17: rst7s6Lt1h A791 84,4
